--- a/floatlabel.css
+++ b/floatlabel.css
@@ -1,4 +1,3 @@
-
 #comment-form {
 	position : relative;
 }
@@ -21,8 +20,8 @@
 }
 .modified .field input:invalid , .modified  .field textarea:invalid {
 	border : none;
-  box-shadow: none;
-  background-image: linear-gradient(top, rgba(0,0,0,0) 31%, rgba(255,0,0,0.2) 80%);
+	box-shadow: none;
+	background-image: linear-gradient(top, rgba(0,0,0,0) 31%, rgba(255,0,0,0.2) 80%);
 	background-image: -o-linear-gradient(top, rgba(0,0,0,0) 31%, rgba(255,0,0,0.2) 80%);
 	background-image: -moz-linear-gradient(top, rgba(0,0,0,0) 31%, rgba(255,0,0,0.2) 80%);
 	background-image: -webkit-linear-gradient(top, rgba(0,0,0,0) 31%, rgba(255,0,0,0.2) 80%);
@@ -35,24 +34,27 @@
 }
 
 #comment-form [type="submit"], #comment-form [type="reset"] {
-    color: rgb(238, 238, 238);
-    font-size: 0.875em;
-    display: inline-block;
-    text-transform: capitalize;
-    font-weight: bold;
-    text-align: center;
-    padding: 0.33em 0.66em;
-    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
-    border: 1px solid rgb(104, 104, 103);
-    border-radius: 5px;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
-    background: -moz-linear-gradient(center top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%) repeat scroll 0% 0% transparent;
+	color: rgb(238, 238, 238);
+	font-size: 0.875em;
+	display: inline-block;
+	text-transform: capitalize;
+	font-weight: bold;
+	text-align: center;
+	padding: 0.33em 0.66em;
+	text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
+	border: 1px solid rgb(104, 104, 103);
+	border-radius: 5px;
+	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+	background-image: linear-gradient( top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
+	background-image: -o-linear-gradient( top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
+	background-image: -moz-linear-gradient( top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
+	background-image: -webkit-linear-gradient( top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
+	background-image: -ms-linear-gradient( top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
 	transition-property: opacity;
 	transition-duration: 0.4s;  
 	position : relative;
-    opacity : 0;
+	opacity : 0;
 	top:0.8em;
-    
 }
 
 #comment-form.modified [type="submit"] {
