--- a/floatlabel.css
+++ b/floatlabel.css
@@ -27,7 +27,7 @@
 	box-shadow: none;
 }
 
-.modified .field :invalid /*.modified .field input:invalid , .modified  .field textarea:invalid */{
+.modified .field :invalid {
 	/*border : none;
 	box-shadow: none;*/
 	background-image: linear-gradient(top, rgba(0,0,0,0) 31%, rgba(255,0,0,0.2) 80%);
@@ -38,11 +38,23 @@
 }
 
 .field input , .field textarea , .field input:focus , .field textarea:focus {
+	font-family: Titillium Web;
 	border : none;
 	background : transparent;
+	width: 95%;
 }
 
-#comment-form [type="submit"], #comment-form [type="reset"] {
+#form-help {
+	opacity: 0;
+	display : block
+	transition-property: opacity;
+	transition-duration: 0.4s;  
+}
+textarea:focus ~ #form-help {
+	opacity: 1;
+}
+
+#comment-form button {
 	color: rgb(238, 238, 238);
 	font-size: 0.875em;
 	display: inline-block;
