--- a/floatlabel.css
+++ b/floatlabel.css
@@ -5,7 +5,7 @@
 .field {
 	border : 0 1px 1px 1px solid black;
 	margin : 0;
-	width : auto;
+	padding : 0;
 }
 .field label { 
 	position: relative;  
@@ -42,6 +42,11 @@
 	border : none;
 	background : transparent;
 	width: 95%;
+}
+
+#comment-1stline .field {
+	display : inline-block;
+	width : 49%;
 }
 
 #form-help {
