--- a/floatlabel.css
+++ b/floatlabel.css
@@ -45,6 +45,7 @@
 	border-radius: 0px;
 	background : transparent;
 	width: 95%;
+	outline : none;
 }
 
 #comment-1stline {
@@ -87,11 +88,11 @@ textarea:focus ~ #form-help {
 	border: 1px solid rgb(104, 104, 103);
 	border-radius: 5px;
 	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
-	background-image: linear-gradient( top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
-	background-image: -o-linear-gradient( top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
-	background-image: -moz-linear-gradient( top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
-	background-image: -webkit-linear-gradient( top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
-	background-image: -ms-linear-gradient( top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
+	background-image: linear-gradient(			top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
+	background-image: -o-linear-gradient(		top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
+	background-image: -moz-linear-gradient(		top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
+	background-image: -webkit-linear-gradient(	top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
+	background-image: -ms-linear-gradient(		top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
 	transition-property: opacity;
 	transition-duration: 0.4s;  
 	position : relative;
