--- a/floatlabel.css
+++ b/floatlabel.css
@@ -83,10 +83,6 @@ textarea:focus ~ #form-help {
 }
 
 #comment-form button {
-	position : relative;
-	display : inline-block;
-	top : 0.8em;
-	opacity : 0;
 	padding : 0.33em 0.66em;
 	border: 1px solid rgb(104, 104, 103);
 	border-radius : 5px;
@@ -102,11 +98,16 @@ textarea:focus ~ #form-help {
 	background-image : -moz-linear-gradient(	top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
 	background-image : -webkit-linear-gradient(	top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
 	background-image : -ms-linear-gradient(		top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
+}
+
+
+#comment-4thline , .modified:invalid #comment-4thline {
+	opacity : 0;
+	border-top : 1px solid #cce ;
 	transition-property : opacity;
 	transition-duration : 0.4s;  
 }
 
-#comment-form.modified button {
-	top : 0em;
+.modified #comment-4thline , .modified:valid #comment-4thline {
 	opacity : 1;
 }
