--- a/floatlabel.css
+++ b/floatlabel.css
@@ -70,6 +70,7 @@
 }
 
 #form-help {
+	/* l'info technique sur le champ de texte n'est révélé que si le textarea a le focus */
 	display : block;
 	opacity: 0;
 	transition-property: opacity;
@@ -78,6 +79,19 @@
 
 textarea:focus ~ #form-help {
 	opacity: 1;
+}
+
+#comment-4thline , .modified:invalid #comment-4thline {
+	/* par défaut, la ligne du bouton de validation est cachée... */
+	opacity : 0;
+	border-top : 1px solid #cce;
+	transition-property : opacity;
+	transition-duration : 0.4s;  
+}
+
+.modified #comment-4thline , .modified:valid #comment-4thline {
+	/* il est révélé soit si le commentaire est valide (si le navigateur le supporte), soit si le formulaire a été touché */
+	opacity : 1;
 }
 
 #comment-form button {
@@ -96,17 +110,4 @@ textarea:focus ~ #form-help {
 	background-image : -moz-linear-gradient(	top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
 	background-image : -webkit-linear-gradient(	top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
 	background-image : -ms-linear-gradient(		top , rgb(119, 119, 119) 0px, rgb(85, 85, 85) 100%);
-}
-
-#comment-4thline , .modified:invalid #comment-4thline {
-	/* par défaut, la ligne du bouton de validation est cachée... */
-	opacity : 0;
-	border-top : 1px solid #cce;
-	transition-property : opacity;
-	transition-duration : 0.4s;  
-}
-
-.modified #comment-4thline , .modified:valid #comment-4thline {
-	/* il est révélé soit si le commentaire est valide (si le navigateur le supporte), soit si le formulaire a été touché */
-	opacity : 1;
 }
