--- a/floatlabel.css
+++ b/floatlabel.css
@@ -6,15 +6,6 @@
 
 /** code "réel" sur la section #comment-form **/
 
-/* resets */
-
-#comment-form :invalid {
-	/* reset */
-	border : none;
-	box-shadow : none;
-}
-/* et on y va */
-
 .field {
 	margin : 0;
 	padding : 0;
@@ -44,6 +35,12 @@
 	border : none;
 	border-radius: 0px;
 	font-family: Titillium Web, sans-serif;
+}
+
+.field :invalid {
+	/* reset */
+	border : none;
+	box-shadow : none;
 }
 
 .modified .field :invalid {
